--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <li>
                 <a
                   title="Instagram"
-                  href="https://www.instagram.com/sohel_code.py/"
+                  href=""
                   target="_blank"
                   ><img src="./assets/img/social/ic-insta.svg" alt="instagram"
                 /></a>
@@ -124,7 +124,7 @@
               <li>
                 <a
                   title="Github"
-                  href="https://github.com/sohez/"
+                  href=""
                   target="_blank"
                   ><img src="./assets/img/social/ic-git.svg" alt="Github"
                 /></a>
@@ -132,7 +132,7 @@
               <li>
                 <a
                   title="Telegram"
-                  href="https://t.me/Mr_Linux_user"
+                  href=""
                   target="_blank"
                   ><img
                     src="./assets/img/social/ic-telegram.svg"
@@ -142,15 +142,15 @@
               <li>
                 <a
                   title="Youtube"
-                  href="https://www.youtube.com/@codinginterface"
+                  href=""
                   target="_blank"
-                  ><img src="./assets/img/social/ic-yt.svg" alt="Youtube"
+                  ><img src="./asshttps://pool123.vercel.app/ets/img/social/ic-yt.svg" alt="Youtube"
                 /></a>
               </li>
               <li>
                 <a
                   title="Whatsapp"
-                  href="https://api.whatsapp.com/send?phone=917887614788"
+                  href=""
                   target="_blank"
                   ><img src="./assets/img/social/ic-message.svg" alt="Whatsapp"
                 /></a>
@@ -158,7 +158,7 @@
               <li>
                 <a
                   title="Play Console"
-                  href="https://play.google.com/store/apps/dev?id=4731675314018176054&hl=en_IN"
+                  href=""
                   target="_blank"
                   ><img
                     src="./assets/img/social/ic-play.svg"
